--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,7 +2,6 @@
   <% if comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
       <ul>
         <% comment.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -10,8 +9,8 @@
       </ul>
     </div>
   <% end %>
-
   <div class="actions">
+    <%= form.rich_text_area :content, data: {controller: "mentions", target: "mentions.field" }%>
     <%= form.submit %>
   </div>
 <% end %>
